small Update in rps.html

--- a/rps.html
+++ b/rps.html
@@ -36,7 +36,7 @@
     </div>
 
     
-    <p id="current-result">Pick Your Move !!</p>
+    <p id="current-result">Pick Your Move !!! </p>
 
     <script src="rps.js"></script>
     
